objects/ASI_CRM_SegmentationCriteria__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_1st_Dimension__c</fullName>
        <label>1st Dimension</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Historical V0.0</fullName>
                </value>
                <value>
                    <fullName>Historical Vfinal</fullName>
                </value>
                <value>
                    <fullName>New Contract V Final</fullName>
                </value>
                <value>
                    <fullName>New Contact V0.0 Contract</fullName>
                </value>
                <value>
                    <fullName>New Contract V0.0 Est.</fullName>
                </value>
                <value>
                    <fullName>Payment Speed%</fullName>
                </value>
                <value>
                    <fullName>Min Key Strategy Achievement Rate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_2nd_Dimension__c</fullName>
        <label>2nd Dimension</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Historical V0.0</fullName>
                </value>
                <value>
                    <fullName>Historical Vfinal</fullName>
                </value>
                <value>
                    <fullName>New Contract V Final</fullName>
                </value>
                <value>
                    <fullName>New Contact V0.0 Contract</fullName>
                </value>
                <value>
                    <fullName>New Contract V0.0 Est.</fullName>
                </value>
                <value>
                    <fullName>Payment Speed%</fullName>
                </value>
                <value>
                    <fullName>Theoretical Value</fullName>
                </value>
                <value>
                    <fullName>Predefined Theoretical Value</fullName>
                </value>
                <value>
                    <fullName>Volume Speed%</fullName>
                </value>
                <value>
                    <fullName>Total Volume Achievement Rate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Alignment_Percentage__c</fullName>
        <label>Alignment (Percentage)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Alignment_Value__c</fullName>
        <label>Alignment (Value)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Code__c</fullName>
        <label>Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CallFrequency__c</fullName>
        <label>Call Frequency</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CallLength__c</fullName>
        <label>Call Length</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Channel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Channel</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2) OR 3</booleanFilter>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>MY Segmentation Criteria</value>
            </filterItems>
            <filterItems>
                <field>ASI_CRM_CN_Channel__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>MY Segmentation Channel</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>notEqual</operation>
                <value>MY Segmentation Criteria</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_CRM_CN_Channel__c</referenceTo>
        <relationshipLabel>Segmentation Criteria</relationshipLabel>
        <relationshipName>Segmentation_Criteria</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Checkpoint__c</fullName>
        <label>Checkpoint</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Historical Contract Vfinal Actual Volume(9L) should [Operation][Alignment] compared with Historical Contract V0.0 Volume(9L).</fullName>
                </value>
                <value>
                    <fullName>Historical Contract Vfinal fixed cost should [Operation][Alignment] compared with Historical Contract V0.0 Fixed Cost.</fullName>
                </value>
                <value>
                    <fullName>PO Start Date should not[Operation][Alignment] compared with PO Submit Date</fullName>
                </value>
                <value>
                    <fullName>New Contract V0.0 Volume(9L) should [Operation][Alignment] compared with Historical Contract Vfinal Actual Volume(9L).</fullName>
                </value>
                <value>
                    <fullName>New Contract V0.0 Ultra premium and above volume(9L) should [Operation][Alignment] compared with the volume in historcial contract V Final(9L).</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Chinese_Interpretation__c</fullName>
        <label>Chinese Interpretation</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Division__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Division</label>
        <referenceTo>ASI_CRM_Division__c</referenceTo>
        <relationshipLabel>Segmentation Criteria</relationshipLabel>
        <relationshipName>Segmentation_Criteria</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_English_Interpretation__c</fullName>
        <description>ASI_CRM_English_Interpretation</description>
        <label>English Interpretation</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Financial_Indicator__c</fullName>
        <label>Financial Indicator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Volume: Total</fullName>
                </value>
                <value>
                    <fullName>Volume: By Grade - Standard</fullName>
                </value>
                <value>
                    <fullName>Volume: By Grade - Premium</fullName>
                </value>
                <value>
                    <fullName>Volume: By Grade - Super Premium</fullName>
                </value>
                <value>
                    <fullName>Volume: By Grade - Ultra Premum</fullName>
                </value>
                <value>
                    <fullName>Volume: By Grade - Prestige</fullName>
                </value>
                <value>
                    <fullName>Volume: By Grade - Ultra Prestige</fullName>
                </value>
                <value>
                    <fullName>Volume: By Category - Others</fullName>
                </value>
                <value>
                    <fullName>Volume: By Category - Whisky</fullName>
                </value>
                <value>
                    <fullName>Volume: By Category - Brandy</fullName>
                </value>
                <value>
                    <fullName>Volume: By Category - White Spirit</fullName>
                </value>
                <value>
                    <fullName>Volume: By Category - Wine</fullName>
                </value>
                <value>
                    <fullName>Volume: By Category - Champagne</fullName>
                </value>
                <value>
                    <fullName>Trade Expenses: Fixed Expense %</fullName>
                </value>
                <value>
                    <fullName>Trade Expenses: Investment per CR12 eq btl</fullName>
                </value>
                <value>
                    <fullName>Trade Expenses: ROI(Actual)</fullName>
                </value>
                <value>
                    <fullName>BC: BC%</fullName>
                </value>
                <value>
                    <fullName>Period: PO Start Date</fullName>
                </value>
                <value>
                    <fullName>Methodology: BRSF Methodology</fullName>
                </value>
                <value>
                    <fullName>Methodology: PSF Methodology</fullName>
                </value>
                <value>
                    <fullName>Methodology: PSF Volume Base</fullName>
                </value>
                <value>
                    <fullName>Payment Speed: Trade Expense (Excl. Fixed Cost)</fullName>
                </value>
                <value>
                    <fullName>Achievement Rate</fullName>
                </value>
                <value>
                    <fullName>Martell BC Rate</fullName>
                </value>
                <value>
                    <fullName>Volume: By Category - Baijiu</fullName>
                    <isActive>false</isActive>
                    <label>Volume: By Category - Baijiu</label>
                </value>
                <value>
                    <fullName>Volume: By Category - RTD</fullName>
                    <isActive>false</isActive>
                    <label>Volume: By Category - RTD</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Floating_Interval_Down__c</fullName>
        <description>-</description>
        <inlineHelpText>-</inlineHelpText>
        <label>Floating Interval (Down)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Floating_Interval_Percent_Down__c</fullName>
        <inlineHelpText>-%</inlineHelpText>
        <label>Floating Interval Percent (Down)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Floating_Interval_Percent_Up__c</fullName>
        <inlineHelpText>+%</inlineHelpText>
        <label>Floating Interval Percent (Up)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Floating_Interval_Up__c</fullName>
        <description>+</description>
        <inlineHelpText>+</inlineHelpText>
        <label>Floating Interval (Up)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Grade__c</fullName>
        <label>Grade</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_GradingCriteriaFrom__c</fullName>
        <label>Grading Criteria - From</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_GradingCriteriaTo__c</fullName>
        <label>Grading Criteria - To</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Key_For_Account__c</fullName>
        <formula>ASI_CRM_Channel__r.Id + TEXT(ASI_CRM_Grade__c) + TEXT(ASI_CRM_SalesPotential__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Key For Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Max_Value__c</fullName>
        <inlineHelpText>For Operation Within</inlineHelpText>
        <label>Max Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Min_Value__c</fullName>
        <inlineHelpText>For Operation Within</inlineHelpText>
        <label>Min Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Operation__c</fullName>
        <label>Operation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Equal to</fullName>
                </value>
                <value>
                    <fullName>Greater than</fullName>
                </value>
                <value>
                    <fullName>Greater than or Equal to</fullName>
                </value>
                <value>
                    <fullName>Less than</fullName>
                </value>
                <value>
                    <fullName>Less than or Equal to</fullName>
                </value>
                <value>
                    <fullName>Within</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Outlet_Image__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Outlet Image</label>
        <referenceTo>ASI_TH_CRM_OutletImage__c</referenceTo>
        <relationshipLabel>Segmentation Criteria</relationshipLabel>
        <relationshipName>Segmentation_Criteria</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Outlet_New_Image__c</fullName>
        <label>Outlet New Image</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Iconic</fullName>
                </value>
                <value>
                    <fullName>Leading</fullName>
                </value>
                <value>
                    <fullName>Premium</fullName>
                </value>
                <value>
                    <fullName>Mainstream</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Outlet_Strategy__c</fullName>
        <label>Outlet Strategy</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Attack</fullName>
                </value>
                <value>
                    <fullName>Defend</fullName>
                </value>
                <value>
                    <fullName>Maintain</fullName>
                </value>
                <value>
                    <fullName>Watch</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_RVP_Special_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RVP Special Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Region</label>
        <referenceTo>ASI_CRM_Region__c</referenceTo>
        <relationshipLabel>Segmentation Criteria</relationshipLabel>
        <relationshipName>Segmentation_Criteria</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SOMCriteriaFrom__c</fullName>
        <label>SOM Criteria - From</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SOMCriteriaTo__c</fullName>
        <label>SOM Criteria - To</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SalesPotential__c</fullName>
        <label>Sales Potential</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A1</fullName>
                </value>
                <value>
                    <fullName>A2</fullName>
                </value>
                <value>
                    <fullName>A3</fullName>
                </value>
                <value>
                    <fullName>B1</fullName>
                </value>
                <value>
                    <fullName>B2</fullName>
                </value>
                <value>
                    <fullName>B3</fullName>
                </value>
                <value>
                    <fullName>C1</fullName>
                </value>
                <value>
                    <fullName>C2</fullName>
                </value>
                <value>
                    <fullName>C3</fullName>
                </value>
                <value>
                    <fullName>D1</fullName>
                </value>
                <value>
                    <fullName>D2</fullName>
                </value>
                <value>
                    <fullName>D3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_SegmentCriteria_EXID__c</fullName>
        <externalId>true</externalId>
        <label>Segmentation Criteria EXID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>AS_CRM_Predefined_Theoretical_Value__c</fullName>
        <label>Predefined Theoretical Value</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PRC Guidance</fullName>
                </value>
                <value>
                    <fullName>PO Submit Date</fullName>
                </value>
                <value>
                    <fullName>PRC Default Methodology</fullName>
                </value>
                <value>
                    <fullName>PRC Default Volume Base</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Segmentation Criteria</label>
    <listViews>
        <fullName>ASI_CRM_MY_Segmentation_Criteria</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Channel__c</columns>
        <columns>ASI_CRM_Outlet_Strategy__c</columns>
        <columns>ASI_CRM_Outlet_Image__c</columns>
        <columns>ASI_CRM_CallFrequency__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_SegmentationCriteria__c.ASI_CRM_MY_Segmentation_Criteria</value>
        </filters>
        <label>MY Segmentation Criteria</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_MY_PowerUser</group>
            <group>ASI_CRM_MY_StandardUser</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_TW_Segmentation_Criteria</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Channel__c</columns>
        <columns>ASI_CRM_Grade__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_SegmentationCriteria__c.ASI_CRM_TW_SegmentationCriteria</value>
        </filters>
        <label>TW Segmentation Criteria</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_TW_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>CN_CheckPoint_Group_Contract_PO_Open</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Region__c</columns>
        <columns>ASI_CRM_Channel__c</columns>
        <columns>ASI_CRM_RVP_Special_Approval__c</columns>
        <columns>ASI_CRM_Financial_Indicator__c</columns>
        <columns>ASI_CRM_Operation__c</columns>
        <columns>ASI_CRM_English_Interpretation__c</columns>
        <columns>ASI_CRM_Chinese_Interpretation__c</columns>
        <columns>ASI_CRM_1st_Dimension__c</columns>
        <columns>ASI_CRM_2nd_Dimension__c</columns>
        <columns>ASI_CRM_Alignment_Percentage__c</columns>
        <columns>ASI_CRM_Alignment_Value__c</columns>
        <columns>AS_CRM_Predefined_Theoretical_Value__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_SegmentationCriteria__c.ASI_CRM_CN_PO_Open_Group_Contract_Checkpoint_Criteria</value>
        </filters>
        <label>CN CheckPoint-Group Contract PO Open</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_CN_IT_Admin</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CN_CheckPoint_PO_Modi</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Region__c</columns>
        <columns>ASI_CRM_Channel__c</columns>
        <columns>ASI_CRM_RVP_Special_Approval__c</columns>
        <columns>ASI_CRM_Financial_Indicator__c</columns>
        <columns>ASI_CRM_Operation__c</columns>
        <columns>ASI_CRM_English_Interpretation__c</columns>
        <columns>ASI_CRM_Chinese_Interpretation__c</columns>
        <columns>ASI_CRM_1st_Dimension__c</columns>
        <columns>ASI_CRM_2nd_Dimension__c</columns>
        <columns>ASI_CRM_Alignment_Percentage__c</columns>
        <columns>ASI_CRM_Alignment_Value__c</columns>
        <columns>AS_CRM_Predefined_Theoretical_Value__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_SegmentationCriteria__c.ASI_CRM_CN_PO_Modi_Checkpoint_Criteria</value>
        </filters>
        <label>CN CheckPoint-PO Modi.</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_CN_IT_Admin</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CN_CheckPoint_PO_Open</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Region__c</columns>
        <columns>ASI_CRM_Channel__c</columns>
        <columns>ASI_CRM_RVP_Special_Approval__c</columns>
        <columns>ASI_CRM_Financial_Indicator__c</columns>
        <columns>ASI_CRM_Operation__c</columns>
        <columns>ASI_CRM_English_Interpretation__c</columns>
        <columns>ASI_CRM_Chinese_Interpretation__c</columns>
        <columns>ASI_CRM_1st_Dimension__c</columns>
        <columns>ASI_CRM_2nd_Dimension__c</columns>
        <columns>ASI_CRM_Alignment_Percentage__c</columns>
        <columns>ASI_CRM_Alignment_Value__c</columns>
        <columns>AS_CRM_Predefined_Theoretical_Value__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_SegmentationCriteria__c.ASI_CRM_CN_PO_Open_Checkpoint_Criteria</value>
        </filters>
        <label>CN CheckPoint-PO Open</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_CN_IT_Admin</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CN_CheckPoint_Payment</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Region__c</columns>
        <columns>ASI_CRM_Channel__c</columns>
        <columns>ASI_CRM_RVP_Special_Approval__c</columns>
        <columns>ASI_CRM_Financial_Indicator__c</columns>
        <columns>ASI_CRM_Operation__c</columns>
        <columns>ASI_CRM_English_Interpretation__c</columns>
        <columns>ASI_CRM_Chinese_Interpretation__c</columns>
        <columns>ASI_CRM_1st_Dimension__c</columns>
        <columns>ASI_CRM_2nd_Dimension__c</columns>
        <columns>ASI_CRM_Alignment_Percentage__c</columns>
        <columns>ASI_CRM_Alignment_Value__c</columns>
        <columns>AS_CRM_Predefined_Theoretical_Value__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_SegmentationCriteria__c.ASI_CRM_CN_Last_Payment_Checkpoint_Criteria</value>
        </filters>
        <label>CN CheckPoint-Last Payment</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_CN_IT_Admin</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CN_CheckPoint_Payment1</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Region__c</columns>
        <columns>ASI_CRM_Channel__c</columns>
        <columns>ASI_CRM_RVP_Special_Approval__c</columns>
        <columns>ASI_CRM_Financial_Indicator__c</columns>
        <columns>ASI_CRM_Operation__c</columns>
        <columns>ASI_CRM_English_Interpretation__c</columns>
        <columns>ASI_CRM_Chinese_Interpretation__c</columns>
        <columns>ASI_CRM_1st_Dimension__c</columns>
        <columns>ASI_CRM_2nd_Dimension__c</columns>
        <columns>ASI_CRM_Alignment_Percentage__c</columns>
        <columns>ASI_CRM_Alignment_Value__c</columns>
        <columns>AS_CRM_Predefined_Theoretical_Value__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_SegmentationCriteria__c.ASI_CRM_CN_Payment_Checkpoint_Criteria</value>
        </filters>
        <label>CN CheckPoint-Payment</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_CN_IT_Admin</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CN_CheckPoint_li</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Channel__c</columns>
        <columns>ASI_CRM_Region__c</columns>
        <columns>ASI_CRM_RVP_Special_Approval__c</columns>
        <columns>ASI_CRM_Financial_Indicator__c</columns>
        <columns>ASI_CRM_Operation__c</columns>
        <columns>ASI_CRM_English_Interpretation__c</columns>
        <columns>ASI_CRM_Chinese_Interpretation__c</columns>
        <columns>ASI_CRM_1st_Dimension__c</columns>
        <columns>ASI_CRM_2nd_Dimension__c</columns>
        <columns>ASI_CRM_Alignment_Percentage__c</columns>
        <columns>ASI_CRM_Alignment_Value__c</columns>
        <columns>AS_CRM_Predefined_Theoretical_Value__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_SegmentationCriteria__c.ASI_CRM_CN_Segmentation_Criteria</value>
        </filters>
        <label>CN CheckPoint_li</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_CN_IT_Admin</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CN_Segmentation_Criteria</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Channel__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_SegmentationCriteria__c.ASI_CRM_CN_Segmentation_Criteria</value>
        </filters>
        <label>CN Segmentation Criteria</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_CN_IT_Admin</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Segmentation Criteria Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Segmentation Criteria</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_CN_Last_Payment_Checkpoint_Criteria</fullName>
        <active>true</active>
        <label>CN Last Payment Checkpoint Criteria</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_CN_PO_Modi_Checkpoint_Criteria</fullName>
        <active>true</active>
        <label>CN PO Modi. Checkpoint Criteria</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_CN_PO_Open_Checkpoint_Criteria</fullName>
        <active>true</active>
        <label>CN PO Open Checkpoint Criteria</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_CN_PO_Open_Group_Contract_Checkpoint_Criteria</fullName>
        <active>true</active>
        <label>CN PO Open Group Contract Checkpoint Criteria</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_CN_Payment_Checkpoint_Criteria</fullName>
        <active>true</active>
        <label>CN Payment Checkpoint Criteria</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_CN_Segmentation_Criteria</fullName>
        <active>true</active>
        <label>CN Segmentation Criteria</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_MY_Segmentation_Criteria</fullName>
        <active>true</active>
        <label>MY Segmentation Criteria</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_TW_SegmentationCriteria</fullName>
        <active>true</active>
        <label>TW Segmentation Criteria</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>ASI_CRM_CN_2nd_Dimension_Validation</fullName>
        <active>true</active>
        <description>If select &quot;Predefined Theoretical Value&quot; in 2nd Dimension, check if Predefined Theoretical Value has been selected.</description>
        <errorConditionFormula>AND(CONTAINS(RecordType.DeveloperName, &quot;ASI_CRM_CN&quot;),TEXT(ASI_CRM_2nd_Dimension__c ) = &quot;Predefined Theoretical Value&quot;,
ISBLANK(TEXT(AS_CRM_Predefined_Theoretical_Value__c )))</errorConditionFormula>
        <errorMessage>Please select a Predefined Theoretical Value.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_CRM_CN_Alignment_Validation</fullName>
        <active>true</active>
        <description>If select &quot;Theoretical Value&quot; in 2nd Dimension, check if Alignment is inputted.</description>
        <errorConditionFormula>AND(CONTAINS(RecordType.DeveloperName, &quot;ASI_CRM_CN&quot;),
TEXT(ASI_CRM_2nd_Dimension__c ) = &quot;Theoretical Value&quot;,
TEXT(ASI_CRM_Operation__c) &lt;&gt; &quot;Within&quot;,
AND( ISNULL( ASI_CRM_Alignment_Value__c ), ISNULL( ASI_CRM_Alignment_Percentage__c)))</errorConditionFormula>
        <errorMessage>Please fill in Alignment (Value) or Alignment (Percentage).</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_CRM_CN_Floating_Interval_Validtion</fullName>
        <active>true</active>
        <errorConditionFormula>AND(CONTAINS(RecordType.DeveloperName,&quot;ASI_CRM_CN&quot;),
TEXT(ASI_CRM_2nd_Dimension__c ) &lt;&gt; &quot;Predefined Theoretical Value&quot;,
TEXT(ASI_CRM_2nd_Dimension__c ) &lt;&gt; &quot;Theoretical Value&quot;, 
TEXT( ASI_CRM_Operation__c ) = &quot;Within&quot;,
AND(OR(ISNULL(ASI_CRM_Floating_Interval_Percent_Down__c),ISNULL(ASI_CRM_Floating_Interval_Percent_Up__c)), OR(ISBLANK( ASI_CRM_Floating_Interval_Down__c ),
ISBLANK(ASI_CRM_Floating_Interval_Up__c )
))
)</errorConditionFormula>
        <errorMessage>Please fill in Floating Interval (Down) and Floating Interval (Up).</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_CRM_CN_Max_Min_Value_Validation</fullName>
        <active>true</active>
        <description>To check if both max and min value are filled</description>
        <errorConditionFormula>AND(CONTAINS(RecordType.DeveloperName, &quot;ASI_CRM_CN&quot;),
Text(ASI_CRM_Operation__c) = &quot;Within&quot;,
Text( ASI_CRM_2nd_Dimension__c ) = &quot;Theoretical Value&quot;,OR(ISNULL(ASI_CRM_Max_Value__c),ISNULL(ASI_CRM_Min_Value__c))
 )</errorConditionFormula>
        <errorMessage>Please fill in both Max Value and Min Value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_CRM_CN_Methodology_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND(OR(AND(TEXT(ASI_CRM_Financial_Indicator__c) = &quot;Methodology: BRSF Methodology&quot;, TEXT(AS_CRM_Predefined_Theoretical_Value__c) &lt;&gt; &quot;PRC Default Methodology&quot;),
AND(TEXT(ASI_CRM_Financial_Indicator__c) = &quot;Methodology: PSF Methodology&quot;, TEXT(AS_CRM_Predefined_Theoretical_Value__c) &lt;&gt; &quot;PRC Default Methodology&quot;
)),CONTAINS(RecordType.DeveloperName, &quot;ASI_CRM_CN&quot;))</errorConditionFormula>
        <errorMessage>Please select PRC Default Methodology in Predefined Theoretical Value.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_CRM_CN_Volume_Base_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND(CONTAINS(RecordType.DeveloperName, &quot;ASI_CRM_CN&quot;),TEXT(ASI_CRM_Financial_Indicator__c) = &quot;Methodology: PSF Volume Base&quot;, TEXT(AS_CRM_Predefined_Theoretical_Value__c) &lt;&gt; &quot;PRC Default Volume Base&quot;)</errorConditionFormula>
        <errorMessage>Please select PRC Default Volume Base in Predefined Theoretical Value.</errorMessage>
    </validationRules>
</CustomObject>